# conformal-ts

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: concepts.md  diagnostics.md  index.md  installation.md
docs/adapters/: callable.md  index.md  mlforecast.md  neuralforecast.md  statsforecast.md
docs/api/: index.md
docs/methods/: aci.md  agaci.md  cqr.md  index.md  nexcp.md  spci.md  split.md
examples/: example_cqr.ipynb  example_cqr_statsforecast.ipynb  example_diagnostics.ipynb  example_mlforecast.ipynb  example_statsforecast.ipynb
src/conformal_ts/: __init__.py  base.py  capabilities.py
src/conformal_ts/adapters/: __init__.py  _nixtla_common.py  callable.py  mlforecast.py  neuralforecast.py  statsforecast.py
src/conformal_ts/aggregators/: __init__.py  base.py  ewa.py
src/conformal_ts/diagnostics/: __init__.py  conditional.py  coverage.py  method_diagnostics.py  reports.py  scoring.py
src/conformal_ts/methods/: __init__.py  _online_helpers.py  aci.py  agaci.py  cqr.py  nexcp.py  spci.py  split.py
src/conformal_ts/nonconformity/: __init__.py  absolute.py  quantile.py  signed.py
src/conformal_ts/quantile_regressors/: __init__.py  base.py  qrf.py
tests/: _online_helpers.py
tests/integration/: test_aci_statsforecast.py  test_agaci_statsforecast.py  test_cqr_nixtla.py  test_cqr_statsforecast.py  test_mlforecast_adapter.py  test_neuralforecast_adapter.py  test_nexcp_statsforecast.py  test_spci_statsforecast.py  test_statsforecast_adapter.py
tests/unit/: test_absolute_residual.py  test_aci.py  test_agaci.py  test_aggregators.py  test_callable_adapter.py  test_cqr.py  test_imports.py  test_nexcp.py  test_quantile_regressors.py  test_quantile_score.py  test_signed_residual.py  test_spci.py  test_split.py
(+6 files in other folders)
